--- a/.github/workflows/deploy-label-merge.yml
+++ b/.github/workflows/deploy-label-merge.yml
@@ -1,6 +1,10 @@
 name: "deploy-check"
 on:
+  pull_request_review:
+    branches:    
+      - 'production'
   pull_request:
+    types: [labeled, unlabeled]
     branches:    
       - 'production'
 permissions: write-all
