--- a/.github/workflows/deploy-label-merge.yml
+++ b/.github/workflows/deploy-label-merge.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Find Merge check
       id: check
       run: |
-        id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Merge%20PR')
+        id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Merge%20PR' | jq '.check_runs[0].id')
         echo "::set-output name=id::$id"
     - run: echo ${{ steps.check.outputs.id }}
