--- a/.github/workflows/deploy-label-check.yml
+++ b/.github/workflows/deploy-label-check.yml
@@ -15,4 +15,4 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         name: Merge PR
-        conclusion: ${{ job.status }}
+        conclusion: action_required
