--- a/.github/workflows/deploy-label-merge.yml
+++ b/.github/workflows/deploy-label-merge.yml
@@ -20,4 +20,9 @@ jobs:
       run: |
         id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Merge%20PR' | jq '.check_runs[0].id')
         echo "::set-output name=id::$id"
-    - run: echo ${{ steps.check.outputs.id }}
+    - uses: LouisBrunner/checks-action@v1.2.0
+      with:
+        check_id: ${{ steps.check.outputs.id }}
+        token: ${{ secrets.GITHUB_TOKEN }}
+        name: Merge PR
+        conclusion: completed
