--- a/.github/workflows/merge-deploy.yml
+++ b/.github/workflows/merge-deploy.yml
@@ -3,11 +3,11 @@ name: Automerge
 on:
   # Try enabling auto-merge for a pull request when a draft is marked as “ready for review”, when
   # a required label is applied or when a “do not merge” label is removed, or when a pull request
-  # is updated in any way (opened, synchronized, reopened, edited).
+  # is updated in any way (opened, synchronize, reopened, edited).
   pull_request_target:
     types:
       - opened
-      - synchronized
+      - synchronize
       - reopened
       - edited
       - labeled
