--- a/.github/workflows/deploy-auto-merge.yml
+++ b/.github/workflows/deploy-auto-merge.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Find Merge check
       id: check
       run: |
-        id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Deploy%Auto%20Merge' | jq '.check_runs[0].id')
+        id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Deploy%20Auto%20Merge' | jq '.check_runs[0].id')
         echo "::set-output name=id::$id"
 
 
