--- a/.github/workflows/deploy-auto-merge.yml
+++ b/.github/workflows/deploy-auto-merge.yml
@@ -14,7 +14,7 @@ on:
 permissions: write-all
 
 jobs:
-  automerge:
+  run:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
