--- a/.github/workflows/deploy-automerge.yml
+++ b/.github/workflows/deploy-automerge.yml
@@ -35,3 +35,4 @@ jobs:
           MERGE_LABELS: automerge
           MERGE_METHOD: merge
           MERGE_DELETE_BRANCH: false
+          MERGE_ERROR_FAIL: true
