--- a/.github/workflows/deploy-automerge.yml
+++ b/.github/workflows/deploy-automerge.yml
@@ -1,4 +1,4 @@
-name: automerge
+name: Merge Deployment
 permissions: write-all
 on:
   pull_request:
@@ -8,15 +8,15 @@ on:
       - production
 jobs:
   automerge:
+    name: Merge Deployment
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.pull_request.labels.*.name, 'automerge') }}
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'merge deployment') }}
     steps:
-      - id: automerge
-        name: automerge
+      - name: automerge
         uses: "pascalgn/automerge-action@v0.15.3"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          MERGE_LABELS: automerge
+          MERGE_LABELS: merge deployment
           MERGE_METHOD: merge
           MERGE_DELETE_BRANCH: false
           MERGE_ERROR_FAIL: true
