--- a/.github/workflows/merge-deployment.yml
+++ b/.github/workflows/merge-deployment.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Find Merge check
         id: check
         run: |
-          id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=merge-deployment-attempt' | jq '.check_runs[0].id')
-          echo "::set-output name=id::$id"
+          check_id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=merge-deployment-attempt' | jq '.check_runs[0].id')
+          echo "::set-output name=check_id::$check_id"
       - name: automerge
         uses: "pascalgn/automerge-action@v0.15.3"
         env:
