--- a/.github/workflows/merge-deployment.yml
+++ b/.github/workflows/merge-deployment.yml
@@ -11,17 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ contains(github.event.pull_request.labels.*.name, 'merge deployment') }}
     steps:
-      - uses: LouisBrunner/checks-action@v1.2.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          name: merge-deployment-attempt
-          conclusion: success
-        continue-on-error: true
       - name: Find Merge check
         id: check
         run: |
-          check_id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=merge-deployment-attempt' | jq '.check_runs[0].id')
+          check_id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Merge%20Deployment%20Attempt' | jq '.check_runs[0].id')
           echo "::set-output name=check_id::$check_id"
+      - uses: LouisBrunner/checks-action@v1.2.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          check_id: ${{ steps.check.outputs.check_id }}
+          conclusion: success
       - name: automerge
         uses: "pascalgn/automerge-action@v0.15.3"
         env:
