--- a/.github/workflows/deployment-check.yml
+++ b/.github/workflows/deployment-check.yml
@@ -1,4 +1,4 @@
-name: Merge Deployment
+name: Deployment
 permissions: write-all
 on:
   pull_request:
@@ -8,12 +8,13 @@ on:
     branches:    
       - production
 jobs:
-  merge-deployment-check:
+  create-check:
+    name: Create Check
     runs-on: ubuntu-latest
     if: ${{ contains(github.event.pull_request.labels.*.name, 'merge deployment') }}
     steps:
       - uses: LouisBrunner/checks-action@v1.2.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          name: Merge Deployment Attempt
+          name: Wait for label
           status: in_progress
