--- a/.github/workflows/deployment-merge.yml
+++ b/.github/workflows/deployment-merge.yml
@@ -1,4 +1,4 @@
-name: Merge Deployment
+name: Deployment
 permissions: write-all
 on:
   pull_request:
@@ -7,14 +7,15 @@ on:
     branches:    
       - production
 jobs:
-  merge-deployment:
+  merge:
+    name: Merge
     runs-on: ubuntu-latest
     if: ${{ contains(github.event.pull_request.labels.*.name, 'merge deployment') }}
     steps:
       - name: Find Merge check
         id: check
         run: |
-          check_id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Merge%20Deployment%20Attempt' | jq '.check_runs[0].id')
+          check_id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Wait%20for%20label' | jq '.check_runs[0].id')
           echo "::set-output name=check_id::$check_id"
       - uses: LouisBrunner/checks-action@v1.2.0
         with:
@@ -30,9 +31,13 @@ jobs:
           MERGE_DELETE_BRANCH: false
           MERGE_ERROR_FAIL: true
           UPDATE_LABELS: "disable"
+      - uses: actions-ecosystem/action-remove-labels@v1
+        if: failure()
+        with:
+          labels: merge deployment
       - uses: LouisBrunner/checks-action@v1.2.0
         if: failure()
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           check_id: ${{ steps.check.outputs.check_id }}
-          conclusion: failure
+          status: in_progress
