--- a/.github/workflows/deployment-merge.yml
+++ b/.github/workflows/deployment-merge.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Find Merge check
         id: check
         run: |
-          check_id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Wait%20for%20label' | jq '.check_runs[0].id')
+          check_id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Wait%20for%20merge%20label' | jq '.check_runs[0].id')
           echo "::set-output name=check_id::$check_id"
       - uses: LouisBrunner/checks-action@v1.2.0
         with:
