--- a/.github/workflows/deployment-merge.yml
+++ b/.github/workflows/deployment-merge.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           check_id: ${{ steps.check.outputs.check_id }}
-          conclusion: success
+          conclusion: neutral
       - name: automerge
         uses: "pascalgn/automerge-action@v0.15.3"
         env:
