--- a/.github/workflows/deployment-check.yml
+++ b/.github/workflows/deployment-check.yml
@@ -3,18 +3,17 @@ permissions: write-all
 on:
   pull_request:
     types:
-      - opened
-      - synchronize
+      - labeled
+      - unlabeled
     branches:    
       - production
 jobs:
   create-check:
-    name: Create merge label check
+    name: Require "merge deployment" label
     runs-on: ubuntu-latest
     steps:
-      - uses: LouisBrunner/checks-action@v1.2.0
+      - uses: mheap/github-action-required-labels@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          name: Wait for merge label
-          status: in_progress
-        continue-on-error: true
+          mode: exactly
+          count: 1
+          labels: merge deployment
