--- a/.github/workflows/deployment-merge.yml
+++ b/.github/workflows/deployment-merge.yml
@@ -12,22 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ contains(github.event.pull_request.labels.*.name, 'merge deployment') }}
     steps:
-      - name: Find Merge check
-        id: check
-        run: |
-          check_id=$(curl -sH 'Accept: application/vnd.github.v3+json' 'https://api.github.com/repos/cvle/nextjs2/commits/staging/check-runs?check_name=Wait%20for%20merge%20label' | jq '.check_runs[0].id')
-          echo "::set-output name=check_id::$check_id"
-      - uses: LouisBrunner/checks-action@v1.2.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          check_id: ${{ steps.check.outputs.check_id }}
-          conclusion: neutral
       - name: automerge
         uses: "pascalgn/automerge-action@v0.15.3"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: merge deployment
-          MERGE_METHOD: rebase
+          MERGE_METHOD: merge
           MERGE_DELETE_BRANCH: false
           MERGE_ERROR_FAIL: true
           UPDATE_LABELS: "disable"
@@ -35,9 +25,3 @@ jobs:
         if: failure()
         with:
           labels: merge deployment
-      - uses: LouisBrunner/checks-action@v1.2.0
-        if: failure()
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          check_id: ${{ steps.check.outputs.check_id }}
-          status: in_progress
