--- a/.github/workflows/deployment-merge.yml
+++ b/.github/workflows/deployment-merge.yml
@@ -15,12 +15,12 @@ jobs:
       - name: automerge
         uses: "pascalgn/automerge-action@v0.15.3"
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MERGE_LABELS: merge deployment
           MERGE_METHOD: merge
           MERGE_DELETE_BRANCH: false
           MERGE_ERROR_FAIL: true
-          UPDATE_LABELS: "disable"
+          UPDATE_LABELS: disable
       - uses: actions-ecosystem/action-remove-labels@v1
         if: failure()
         with:
