--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Fetch production branch
         run: git fetch origin production
       - name: Merge production
-        run: git merge production --ff -m "Merge branch 'production' into staging"
+        run: git merge origin/production --ff -m "Merge branch 'production' into staging"
       - name: Force push changes
         run: git push --force --set-upstream origin staging
 
