--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Create new staging branch from main
         run: git checkout -b "staging"
       - name: Fetch production branch
-        run: git fetch origin production
+        run: git pull origin production
       - name: Merge production
         run: git merge origin/production --ff -m "Merge branch 'production' into staging"
       - name: Force push changes
