--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -20,12 +20,8 @@ jobs:
       # Then recreate from main.
       - name: Create new staging branch from main
         run: git checkout -b "staging"
-      - name: Checkout production branch
-        uses: actions/checkout@v3
-        with:
-          ref: production
-      - name: Switch to staging
-        run: git checkout staging
+      - name: Fetch production branch
+        run: git fetch --no-tags --prune --progress --no-recurse-submodules --depth=1 origin +refs/heads/production*:refs/remotes/origin/production*
       - name: Merge production
         run: git merge production --ff -m "Merge branch 'production' into staging"
       - name: Force push changes
