--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -1,5 +1,6 @@
 name: Create Deployment PR
-permissions: write-all
+permissions: 
+   pull-requests: write
 on: workflow_dispatch
 
 jobs:
@@ -21,6 +22,14 @@ jobs:
       # Then recreate from main.
       - name: Create new staging branch from main
         run: git checkout -b "staging"
+      - name: Fetch production branch
+        run: git fetch --no-tags --progress --no-recurse-submodules origin production
+      - name: Merge production
+        run: git merge origin/production --ff -m "Merge branch 'production' into staging"
+        continue-on-error: true
+      - name: Abort potential merge conflicts
+        run: git merge --abort
+        continue-on-error: true
       - name: Force push changes
         run: git push --force --set-upstream origin staging
 
