--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -2,6 +2,7 @@ name: Create Deployment PR
 permissions: 
    pull-requests: write
    repository-projects: write
+   contents: write
 on: workflow_dispatch
 
 jobs:
