--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           ref: main
           fetch-depth: 0
+      - name: Set Github user
+        run: >
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com" &&
+          git config --local user.name "github-actions"
       # Prepare staging branch to point to HEAD of main.
 
       # Delete staging branch if it already exists.
