--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: main
+          # Fetch deeply in order to allow merge functionality.
           fetch-depth: 0
       - name: Set Github User to github-actions
         run: >
