--- a/.github/workflows/deployment-require-label.yml
+++ b/.github/workflows/deployment-require-label.yml
@@ -10,6 +10,7 @@ jobs:
   require-label:
     name: Require "merge deployment" label
     runs-on: ubuntu-latest
+    if: ${{ github.event.label.name == 'merge deployment' }}
     steps:
       - uses: hmarr/debug-action@v2
       - uses: mheap/github-action-required-labels@v1
