--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
       - name: Set Github User to github-actions
         run: >
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com" &&
+          git config --local user.email "github-actions[bot]@users.noreply.github.com" &&
           git config --local user.name "github-actions"
 
       - name: Create new staging branch from main
