--- a/.github/workflows/deployment-merge.yml
+++ b/.github/workflows/deployment-merge.yml
@@ -18,9 +18,10 @@ jobs:
       - run: >
           npx is-mergeable 
           --owner $GITHUB_REPOSITORY_OWNER
-          --repo nextjs2
+          --repo ${{ github.event.pull_request.base.repo.name }}
           --pull-request ${{ github.event.number }}
           --min-reviews 1
+          --check 'Require "merge deployment" label'
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions-ecosystem/action-remove-labels@v1
