--- a/.github/workflows/deployment-merge.yml
+++ b/.github/workflows/deployment-merge.yml
@@ -21,10 +21,31 @@ jobs:
           --repo ${{ github.event.pull_request.base.repo.name }}
           --pull-request ${{ github.event.number }}
           --min-reviews 1
-          --check 'xyz'
+          --check 'Require "merge deployment" label'
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions-ecosystem/action-remove-labels@v1
         if: failure()
         with:
           labels: merge deployment
+
+      - name: Checkout production branch
+        uses: actions/checkout@v3
+        with:
+          ref: production
+          # Fetch deeply in order to allow merge functionality.
+          fetch-depth: 0
+      - name: Set Github User to github-actions
+        run: >
+          git config --local user.email "github-actions[bot]@users.noreply.github.com" &&
+          git config --local user.name "github-actions"
+      - name: Fetch staging branch
+        run: git fetch --no-tags --progress --no-recurse-submodules origin staging
+      - name: Merge staging into production
+        id: merge
+        run: git merge origin/staging --ff -m "Merge branch 'staging' into production"
+      - name: Push changes
+        run: git push --set-upstream origin production
+      - uses: superbrothers/close-pull-request@v3
+        with:
+          comment: "Merged 🚀"
