--- a/.github/workflows/deployment-merge.yml
+++ b/.github/workflows/deployment-merge.yml
@@ -24,6 +24,7 @@ jobs:
           --owner $GITHUB_REPOSITORY_OWNER
           --repo ${{ github.event.pull_request.base.repo.name }}
           --pull-request ${{ github.event.number }}
+          --check 'Require "merge deployment" label'
           --min-reviews 1
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
