--- a/.github/workflows/deployment-merge.yml
+++ b/.github/workflows/deployment-merge.yml
@@ -51,11 +51,13 @@ jobs:
         run: git merge origin/staging --ff -m "Merge branch 'staging' into production"
 
       # Push changes, Github will enforce required check runs here.
+      # Retries 3 times to accomodate pending check runs.
       - name: Push changes
-        # Pushes onces and tries again after 30 seconds.
         run: >
           git push --set-upstream origin production ||
-          sleep 30 && git push --set-upstream origin production
+          echo "Failed, will try again..." && sleep 10 && git push --set-upstream origin production ||
+          echo "Failed, will try again..." && sleep 10 && git push --set-upstream origin production ||
+          echo "Failed, will try again..." && sleep 10 && git push --set-upstream origin production
       - uses: superbrothers/close-pull-request@v3
         with:
           comment: "Merged 🚀"
