--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -9,6 +9,7 @@ jobs:
     name: Create Deployment PR
     runs-on: ubuntu-latest
     steps:
+      - uses: hmarr/debug-action@v2
       - name: Checkout main branch
         uses: actions/checkout@v3
         with:
