--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -9,10 +9,10 @@ jobs:
     name: Create Deployment PR
     runs-on: ubuntu-latest
     steps:
-      - uses: hmarr/debug-action@v2
-      - name: Checkout branch
+      - name: Checkout ${{ env.GITHUB_REF_NAME }} branch
         uses: actions/checkout@v3
         with:
+          ref: ${{ env.GITHUB_REF_NAME }}
           # Fetch deeply in order to allow merge functionality.
           fetch-depth: 0
       - name: Set Github User to github-actions
@@ -20,7 +20,7 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com" &&
           git config --local user.name "github-actions"
 
-      - name: Create new staging branch
+      - name: Create new staging branch from ${{ env.GITHUB_REF_NAME }}
         run: git checkout -b "staging"
 
       - name: Fetch production branch
@@ -48,6 +48,7 @@ jobs:
           pr_title: "Deploy to Production"
           pr_body: |
             ###  Deploy to Production
+            ${{ env.GITHUB_REF_NAME }}
           pr_label: "deployment"
           pr_draft: false
           pr_allow_empty: false
