--- a/.github/workflows/create-deploy-pr.yml
+++ b/.github/workflows/create-deploy-pr.yml
@@ -49,7 +49,7 @@ jobs:
           pr_title: "Deploy to Production"
           pr_body: |
             ###  Deploy to Production
-            ${{ env.GITHUB_REF_NAME }}
+            Ref: ${{ env.GITHUB_REF_NAME }}
           pr_label: "deployment"
           pr_draft: false
           pr_allow_empty: false
